--- a/css styles.css
+++ b/css styles.css
@@ -48,7 +48,7 @@ body
 #main-article
 {
 	width: 32%;
-	display: inline-block;
+	/*display: inline-block;*/
 	box-shadow: 0px 0px 5px black;
 	display: inline-grid;
 	margin-top: 5px;
