--- a/css styles.css
+++ b/css styles.css
@@ -85,7 +85,7 @@ body
 #course-article img
 {
 	margin-left: 500px;
-	width: 400px;
+	width: 80%;
 	height: 300px;
 	border: 2px solid red;
 	display:flex;
